[workspace]

[package]
edition = "2021"
name = "sidevm-probing"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = { version = "0.14.18", features = ["server", "http1", "client"] }
log = "0.4.16"
once_cell = "1.10.0"
sidevm = { version = "0.1.8", package = "pink-sidevm" }
tokio = { version = "1", features = ["macros", "sync", "io-util"] }
routerify = { version = "3.0.0", default-features = false, features = [
    "hyper-http1",
] }

scale = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"], optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
anyhow = "1.0.58"
rand = { version = "0.8.5" }

auto-breath-macro = { path = "../auto-breath" }

[patch.crates-io]
routerify = { git = "https://github.com/kvinwang/routerify.git", branch = "opt-out-tcp" }
